dfir_rs/tests/snapshots/surface_stratum__tick_loop_2@graphvis_dot.snap
---
source: dfir_rs/tests/surface_stratum.rs
expression: df.meta_graph().unwrap().to_dot(cfg)
---
digraph {
    node [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace", style=filled];
    edge [fontname="Monaco,Menlo,Consolas,&quot;Droid Sans Mono&quot;,Inconsolata,&quot;Courier New&quot;,monospace"];
    n1v1 [label="(n1v1) union()", shape=invhouse, fillcolor="#88aaff"]
    n2v1 [label="(n2v1) tee()", shape=house, fillcolor="#ffff88"]
    n3v1 [label="(n3v1) source_iter([1, 3])", shape=invhouse, fillcolor="#88aaff"]
    n4v1 [label="(n4v1) defer_tick_lazy()", shape=invhouse, fillcolor="#88aaff"]
    n5v1 [label="(n5v1) defer_tick_lazy()", shape=invhouse, fillcolor="#88aaff"]
    n6v1 [label="(n6v1) map(|x| 2 * x)", shape=invhouse, fillcolor="#88aaff"]
    n7v1 [label="(n7v1) for_each(|x| output_inner.borrow_mut().push(x))", shape=house, fillcolor="#ffff88"]
    n8v1 [label="(n8v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n9v1 [label="(n9v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n10v1 [label="(n10v1) identity()", shape=invhouse, fillcolor="#88aaff"]
    n11v1 [label="(n11v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n12v1 [label="(n12v1) identity()", shape=invhouse, fillcolor="#88aaff"]
    n13v1 [label="(n13v1) handoff", shape=parallelogram, fillcolor="#ddddff"]
    n1v1 -> n2v1
    n3v1 -> n1v1 [label="0"]
    n6v1 -> n1v1 [label="1"]
    n5v1 -> n6v1
    n4v1 -> n8v1
    n2v1 -> n9v1 [label="0"]
    n2v1 -> n7v1 [label="1"]
    n8v1 -> n10v1
    n9v1 -> n12v1
    n10v1 -> n11v1
    n11v1 -> n5v1 [color=red]
    n12v1 -> n13v1
    n13v1 -> n4v1 [color=red]
    subgraph sg_1v1 {
        cluster=true
        fillcolor="#dddddd"
        style=filled
        label = "sg_1v1\nstratum 0"
        n4v1
    }
    subgraph sg_2v1 {
        cluster=true
        fillcolor="#dddddd"
        style=filled
        label = "sg_2v1\nstratum 0"
        n3v1
        n5v1
        n6v1
        n7v1
        subgraph sg_2v1_var_a {
            cluster=true
            label="var a"
            n1v1
            n2v1
        }
    }
    subgraph sg_3v1 {
        cluster=true
        fillcolor="#dddddd"
        style=filled
        label = "sg_3v1\nstratum 1"
        n10v1
    }
    subgraph sg_4v1 {
        cluster=true
        fillcolor="#dddddd"
        style=filled
        label = "sg_4v1\nstratum 1"
        n12v1
    }
}
